added kafka support + events + listener